Add HSQLDB support and service layer

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,8 @@
         <jackson.core.version>2.5.0</jackson.core.version>
         <jackson.databind.version>2.5.0</jackson.databind.version>
         <jackson.annotations.version>2.5.0</jackson.annotations.version>
+        <hibernate.entitymanager.version>4.3.10.Final</hibernate.entitymanager.version>
+        <hsqldb.version>2.3.3</hsqldb.version>
     </properties>
 
     <dependencies>
@@ -62,6 +64,21 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
             <version>${spring.version}</version>
         </dependency>
         <dependency>
@@ -107,6 +124,18 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
             <version>${jackson.annotations.version}</version>
+        </dependency>
+        <!-- Hibernate -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>${hibernate.entitymanager.version}</version>
+        </dependency>
+        <!-- HSQLDB -->
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>${hsqldb.version}</version>
         </dependency>
         <!-- Logging -->
         <dependency>
