--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
         <jackson.core.version>2.5.0</jackson.core.version>
         <jackson.databind.version>2.5.0</jackson.databind.version>
         <jackson.annotations.version>2.5.0</jackson.annotations.version>
-        <hibernate.entitymanager.version>4.3.10.Final</hibernate.entitymanager.version>
+        <hibernate.version>4.3.5.Final</hibernate.version>
         <hsqldb.version>2.3.3</hsqldb.version>
     </properties>
 
@@ -128,9 +128,19 @@
         <!-- Hibernate -->
         <dependency>
             <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
-            <version>${hibernate.entitymanager.version}</version>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.hibernate.javax.persistence</groupId>-->
+            <!--<artifactId>hibernate-jpa-2.1-api</artifactId>-->
+            <!--<version>1.0.0.Final</version>-->
+        <!--</dependency>-->
         <!-- HSQLDB -->
         <dependency>
             <groupId>org.hsqldb</groupId>
