--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
     <url>https://github.com/GarciaPL/BankNow</url>
     <description>BankNow</description>
 
+    <name>BankNow</name>
+
     <licenses>
         <license>
             <name>MIT License</name>
@@ -20,7 +22,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.7</java.version>
-        <spring.version>4.0.1.RELEASE</spring.version>
+        <spring.version>4.3.13.RELEASE</spring.version>
         <joda.money.version>0.10.0</joda.money.version>
         <junit.version>4.10</junit.version>
         <mockito.version>1.10.19</mockito.version>
